--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/index.ts",
+    "src/components/**/*",
+    "src/hooks/**/*",
+    "src/store/**/*"
+  ],
   "exclude": ["node_modules", "dist", "example"]
 }
